# weight_monitor

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml  secrets.example.yaml
scripts/: calibrate.py  install_service.sh  install_web_service.sh
systemd/: weight-monitor-web.service.template  weight-monitor.service  weight-monitor.service.template
tests/: conftest.py  test_charts.py  test_events.py  test_notifier.py  test_scheduler.py  test_sensor.py  test_webui.py
weight_monitor/: calibration.py  cli.py  config.py  daemon.py  db.py  events.py  models.py  notifier.py  scheduler.py  sensor.py
weight_monitor/webui/: __init__.py  charts.py  routes.py
weight_monitor/webui/templates/: index.html
