[project]
name = "weight-monitor"
version = "0.1.0"
description = "Load-cell based jam detector for an automatic pet feeder"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.10,<4",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
hardware = [
    "hx711>=1.1.2.3",
]
dev = [
    "pytest>=8",
]

[project.scripts]
wm-cli = "weight_monitor.cli:main"
wm-daemon = "weight_monitor.daemon:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["weight_monitor*"]
